[metadata]
name = sloppy
description = Build topography file for MOM6 ocean model
url = https://github.com/raphaeldussin/sloppy
author = Raphael Dussin
author_email = raphael.dussin@gmail.com
keywords = oceanography model topography ice mom6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **sloppy** is a Python package for remapping topographic datasets.

    More Information
    ----------------
    - Source code: `<http://github.com/raphaeldussin/sloppy>`_

[options]
packages = find_namespace:
install_requires =
    numpy
    xarray
    dask
    netCDF4
    numba
tests_require =
    pytest >= 2.8
    pytest_datafiles